# identity-team

./: .gitignore  .log4brains.yml  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  README.md  release-please-config.json  renovate.json
.github/: .jira_sync_config.yaml
.github/workflows/: _charm-build.yaml  _charm-linting.yaml  _charm-quality-checks.yaml  _charm-release.yaml  _charm-tests-integration.yaml  _charm-tests-unit.yaml  _rock-build.yaml  _rock-gh-publish-third-party.yaml  _rock-gh-publish.yaml  _rock-linting.yaml  _rock-oci-publish.yaml  _rock-publish.yaml  _rock-scan.yaml  _secscan.yaml  charm-deploy.yaml  charm-libs-release.yaml  charm-libs-update.yaml  charm-promotion.yaml  charm-publish.yaml  charm-pull-request.yaml  charm-release.yaml  cve-check.yaml  mattermost-daily.yml  oci-update-pr.yaml  pr-auto-approval.yaml  release-please.yaml  rock-release.yaml
decisions/: 20250909-external-groups-management.md  20251014-adopt-async-daily-message-to-streamline-daily-cerimony.md  index.md
docs/: ps6-debug.md
tools/load-test/: README.md  generate_hydra_data.sh  pyproject.toml  setup.json
tools/load-test/hydra_migration_load/: cli.py  config.py  hydra_flow.py  load_flows.py  load_runner.py  models.py  setup_identities.py  totp.py
tools/markdownlint/: README.md  markdownlint.yaml
tools/matrix-daily/: go.mod  go.sum  main.go
tools/pre-commit/: README.md  pre-commit-config-golang.yaml  pre-commit-config-python.yaml  pre-commit-config-rock.yaml
tools/ruff/: README.md
tools/scripts/: repos_list.sh  update_gh_tokens.sh  update_model_uuids.sh
